--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@ant-design/charts": "^1.3.6",
     "@ant-design/icons": "^4.7.0",
     "antd": "^4.21.5",
+    "dayjs": "^1.11.3",
     "next": "latest",
     "react": "18.1.0",
     "react-dom": "18.1.0"
