--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "antd": "^4.21.5",
     "axios": "^0.27.2",
     "dayjs": "^1.11.3",
+    "echarts": "^5.3.3",
     "next": "latest",
     "react": "18.1.0",
     "react-dom": "18.1.0"
